@@ -30,8 +30,8 @@ Kernel configured for up to 2 processors.
 Processor type: i486 (Intel 80486)
 Processors active: 0 1
 Primary memory available: 2.00 gigabytes
-Default processor set: 128 tasks, 401 threads, 2 processors
-Load average: 1.94, Mach factor: 0.46
+Default processor set: 127 tasks, 394 threads, 2 processors
+Load average: 2.05, Mach factor: 0.42
 /bin/machine           = unknown
 /usr/bin/oslevel       = unknown
 /bin/universe          = unknown
